--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-fastapi
-uvicorn
-pandas
-python-dotenv
-pandasai
-openai
-python-multipart
-streamlit
-requests
+fastapi==0.110.0
+uvicorn==0.27.1
+pandas==2.1.4
+pandasai==2.4.1
+pandasai-openai==0.1.6
+python-multipart==0.0.9
+requests==2.31.0
+python-dotenv==1.0.1
+matplotlib==3.8.2
+openai>=1.3.0
