--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,6 @@ services:
     name: data-sage-backend
     env: python
     plan: free
+    pythonversion: 3.11.9
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn app.app:app --host 0.0.0.0 --port $PORT
