Force Python 3.11 via env var to avoid Poetry default 3.13

--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,10 @@ services:
     name: data-sage-backend
     env: python
     plan: free
-    pythonversion: 3.11.9
+
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.9
+
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn app.app:app --host 0.0.0.0 --port $PORT
