--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ fastapi==0.110.0
 uvicorn==0.27.1
 
 pandasai==2.4.1
-
+seaborn==0.13.2
 
 python-multipart==0.0.9
 requests==2.31.0
 python-dotenv==1.0.1
 matplotlib==3.8.2
+typing-extensions>=4.8.0
 openai>=1.3.0
