--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,19 @@ fastapi==0.110.0
 uvicorn==0.27.1
 
 pandasai==2.4.1
+pandas==1.5.3
+
 seaborn==0.13.2
+matplotlib==3.8.2
 
 python-multipart==0.0.9
-requests==2.31.0
 python-dotenv==1.0.1
-matplotlib==3.8.2
-typing-extensions>=4.8.0
-
+requests==2.31.0
 PyYAML>=6.0.1
+
 openai>=1.3.0
+
+# Force CPU-only torch (CRITICAL for Render)
+torch==2.4.1+cpu ; platform_system == "Linux"
+
+--extra-index-url https://download.pytorch.org/whl/cpu
