--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.110.0
 uvicorn==0.27.1
 
 pandasai==2.4.1
+pandasai-openai==0.1.5
 pandas==1.5.3
 
 seaborn==0.13.2
@@ -14,7 +15,7 @@ PyYAML>=6.0.1
 
 openai>=1.3.0
 
-# Force CPU-only torch (CRITICAL for Render)
 torch==2.4.1+cpu ; platform_system == "Linux"
+--extra-index-url https://download.pytorch.org/whl/cpu
 
 --extra-index-url https://download.pytorch.org/whl/cpu
