--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,7 @@
-fastapi==0.110.0
-uvicorn==0.27.1
-
-pandasai==2.4.1
-pandas==1.5.3
-
+streamlit==1.54.0
+requests==2.32.5
+pandas==2.3.3
+matplotlib==3.10.8
 seaborn==0.13.2
-matplotlib==3.8.2
-
-python-multipart==0.0.9
-python-dotenv==1.0.1
-streamlit
-pillow
-requests==2.31.0
-PyYAML>=6.0.1
-
-openai>=1.3.0
-
-torch==2.4.1+cpu ; platform_system == "Linux"
---extra-index-url https://download.pytorch.org/whl/cpu
-
---extra-index-url https://download.pytorch.org/whl/cpu
+Pillow==12.1.1
+python-dotenv==1.2.1
